# ZEG-ASSIGNMENT

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: analyses.py  config.py  datasets.py  parcels.py  router.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py
backend/app/db/: base.py
backend/app/db/models/: __init__.py  constraint_feature.py  dataset_metadata.py  parcel.py
backend/app/db/repositories/: constraint_repository.py  parcel_repository.py
backend/app/geometry/: crs.py  ops.py  serialization.py
backend/app/schemas/: analysis.py  parcel.py
backend/app/services/: analysis_service.py  wetlands_fetcher.py
backend/landscope_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py
backend/scripts/: check_db.py  ingest_demo_data.py  ingest_real_data.py  ingest_wetlands_only.py
backend/tests/: conftest.py
backend/tests/unit/: test_analysis_service.py  test_geometry_ops.py
data/: README.md
docs/: APPROACH.md  ARCHITECTURE.md  DATA_SOURCES.md  PERFORMANCE.md
scripts/: bootstrap_demo.sh
src/: App.tsx  index.css
src/api/: client.ts
src/hooks/: useAnalysis.ts  useDebouncedValue.ts  useKeyboardShortcuts.ts  useMapDraw.ts  useParcelSearch.ts
src/pages/: MainPage.tsx
(+27 files in other folders)
